Fix issue with navbar coming unstuck after scrolling more than the height of the window

--- a/vue/src/css/styles.css
+++ b/vue/src/css/styles.css
@@ -22,6 +22,7 @@ body,
 section {
 	background-color: var(--white-color);
 	border-radius: var(--section-border-radius);
+	margin-top: calc(10vh + var(--header-footer-inside-margin));
 }
 
 section.employee-section:not(#specialty-pizzas) {
